fixed spacing

--- a/style.css
+++ b/style.css
@@ -73,24 +73,42 @@ p {
   flex-direction: row;
 }
 
+#silo {
+  left:0%;
+  max-height: 100vh;
+  height:100vh;
+  min-height: 100vh;
+  z-index: 997;
+  position: absolute;
+}
 
 #title {
   position: absolute;
   height: 45px;
   padding-top: 20%;
-  padding-left: 50%;
+  padding-left: 110%;
   z-index: 998;
 }
 
-#flowers {
-  height:713px;
-  width: 471px;
+#chair_text {
+  width:400px;
+  height: 541px;
   position: absolute;
+  width:400px;
+  height: 541px;
   font-size: 14px;
-  z-index: 997;
   font-family: Georgia;
-  padding-top: 7%;
-  padding-left: 110%;
+  top: 21%;
+  padding-left: 190%;
+}
+
+#bike {
+  left:300%;
+  max-height: 100vh;
+  height:100vh;
+  min-height: 100vh;
+  z-index: 997;
+  position: absolute;
 }
 
 .poem {
@@ -99,14 +117,14 @@ p {
   position: absolute;
   z-index: 997;
   padding-top: 20%;
-  padding-left: 260%;
+  padding-left: 440%;
   overflow-y: hidden;
   font-size: 14px;
 }
 
 #poem_title {
   padding-top: 17%;
-  padding-left: 260%;
+  padding-left: 440%;
   z-index: 997;
   position: absolute;
   width:400px;
@@ -126,49 +144,33 @@ p {
   color: #fff9e0;
 }
 
-.img1 {
-  position: absolute;
-  background: white;
-  padding: 0px;
+#women {
+  max-height: 100vh;
   height:100vh;
-  width: 100%;
-  z-index: 997;
-  left: 350%;
-  bottom:0;
-}
-
-.img2 {
-  position: absolute;
-  background: white;
-  padding: 0px;
-  height:100vh;
-  width: 100%;
-  z-index: 997;
-  left: 550%;
-  bottom:0;
-
-}
-
-#chair_title {
+  min-height: 100vh;
   z-index: 997;
   position: absolute;
-  width:400px;
-  font-size: 17px;
-  font-family: Georgia;
-  font-style: italic;
-  top: 15%;
-  left: 750%;
+  left:570%
 }
 
-#chair_text {
+#title1 {
   z-index: 997;
   position: absolute;
-  width:400px;
-  height: 541px;
+  height: 45px;
+  padding-top: 20%;
+  left: 700%;
+}
+
+#flowers {
+  z-index: 997;
+  position: absolute;
+  height:713px;
+  width: 471px;
+  left: 780%;
   font-size: 14px;
+  z-index: 997;
   font-family: Georgia;
-  top: 21%;
-  left: 750%
+  padding-top: 7%;
 }
 
 /* last text width:346, height: 541 */
@@ -183,7 +185,7 @@ p {
 .info {
   position: fixed;
   font-size: 26px;
-  color: white;
+  color: #fff9e0;
   z-index: 999;
   top: 10px;
   right: 10px;
